--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,7 @@
   }
   
   body {
-    background: linear-gradient(
-      90deg,
-      rgb(142, 205, 241) 0%,
-      rgba(100, 115, 255, 1) 100%
-    );
+    background:#132d46;
   }
   .todo-app {
     display: flex;
@@ -19,7 +15,7 @@
     justify-content: flex-start;
     width: 520px;
     min-height: 600px;
-    background: hsla(272, 32%, 8%, 0.986);
+    background: #191e29;
     text-align: center;
     margin: 128px auto;
     border-radius: 10px;
@@ -28,12 +24,12 @@
   
   h1 {
     margin: 32px 0;
-    color: rgb(23, 136, 136);
+    color: #01c38d;
     font-size: 24px;
   }
   
   .lista-completada {
-    color: aqua;
+    color:#01c38d;
     text-decoration: line-through;
     opacity: 0.4;
   }
@@ -45,15 +41,15 @@
   .todo-input {
     padding: 14px 32px 14px 16px;
     border-radius: 4px 0 0 4px;
-    border: 2px solid #5d0cff;
+    border: 2px solid #696e79;
     outline: none;
     width: 320px;
     background: transparent;
-    color: rgb(128, 18, 231);
+    color: #ffff;
   }
   
   .todo-input::placeholder {
-    color: rgb(128, 18, 231);
+    color: #696e79;
   }
   
   .todo-button {
@@ -62,26 +58,22 @@
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     outline: none;
-    background: linear-gradient(
-      90deg,
-      rgb(10, 204, 188) 0%,
-      rgb(4, 190, 247) 100%
-    );
-    color: rgb(128, 18, 231);
+    background: #01c38d;
+    color: #132d46;
     text-transform: capitalize;
   }
   
   .todo-input-editar {
     padding: 14px 32px 14px 16px;
     border-radius: 4px 0 0 4px;
-    border: 2px solid #5d0cff;
+    border: 2px solid #696e79;
     outline: none;
     width: 320px;
     background: transparent;
-    color: rgb(128, 18, 231);
+    color: #ffff;
   }
   .todo-input-editar::placeholder{
-        color: rgb(128, 18, 231);
+        color: #696e79;
   }
   
   .todo-button-editar {
@@ -89,12 +81,8 @@
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     outline: none;
-    background: linear-gradient(
-      90deg,
-      rgb(10, 204, 188) 0%,
-      rgb(4, 190, 247) 100%
-    );
-    color: rgb(128, 18, 231);
+    background:#01c38d;
+    color: #132d46;
     text-transform: capitalize;
     padding: 16px;
   }
@@ -110,13 +98,8 @@
     justify-content: space-between;
     align-items: center;
     margin: 4px auto;
-    color: rgb(128, 18, 231);
-    background: linear-gradient(
-      90deg,
-      rgb(10, 204, 188) 0%,
-      rgb(4, 190, 247) 100%
-    );
-  
+    color: #132d46;
+    background: #01c38d;
     padding: 16px;
     border-radius: 5px;
     width: 90%;
@@ -130,9 +113,9 @@
   
   .deletar {
     margin-right: 5px;
-    color: rgb(255, 4, 4);;
+    color: #696e79;
   }
   
   .editar {
-    color: rgb(255, 4, 4);
+    color: #696e79;
   }
